Add json and close package

--- a/html/test.html
+++ b/html/test.html
@@ -61,4 +61,8 @@
 <button type="button" onclick="checkInput()">提交</button>
 <p id="id_check_result"></p>
 </body>
+<script>parseJson()</script>
+<a href="javascript:void(0)">点我，我是空链接</a>
+<script>add()</script>
+<script>add()</script>
 </html>
