--- a/html/test.html
+++ b/html/test.html
@@ -78,4 +78,8 @@
     <p id="p1">通过DOM动态添加HTML元素</p>
     <button type="button" onclick="addElement()">点我添加元素</button>
 </div>
+
+<h2>Object</h2>
+<script>testObject()</script>
+<script>testNumber()</script>
 </html>
